--- a/federationData.yaml
+++ b/federationData.yaml
@@ -5,3 +5,16 @@ federationContent:
     content: >- 
       <p>Researchers can search for deidentified individual-level data through the API, 
       which provides metadata that aids in the creation of virtual cohorts across multiple data types from participating resources by accessing CCDI’s Data Federation Resource API.</p>
+  - id: Data_Access
+    topic: Data Access
+    content: >- 
+      <p>Researchers can search for deidentified individual-level data through the API, which provides metadata that aids in the creation of virtual cohorts across multiple data types from participating resources by accessing CCDI’s Data Federation Resource API.</p>
+      <p>To access the CCDI Data Federation Resource API, please click <a class="link" href="https://cbiit.github.io/ccdi-federation-api-aggregation/" target="_blank" rel="noopener noreferrer">here</a>.</p>
+      <p>To access participating nodes API, please click <a class="link" href="https://cbiit.github.io/ccdi-federation-api-spec" target="_blank" rel="noopener noreferrer">here</a>.</p>
+      <p>The API does not deliver files. Rather, it provides an open-access subset of the metadata (e.g., demographics) that match a user’s search criteria and provides the location of the complete data set. The data are accessible according to the policies at each contributing resource.</p>
+  - id: Additional_Available_Resources
+    topic: Additional Available Resources
+    content: >-
+      <p>The CCDI Data Federation Resource offers a suite of resources including the <a class="link" href="https://cbiit.github.io/ccdi-federation-api-aggregation/swagger-aggr.yml" target="_blank" rel="noopener noreferrer">OpenAPI Specification</a>, 
+      <a class="link" href="https://github.com/CBIIT/ccdi-federation-api-spec/wiki" target="_blank" rel="noopener noreferrer">Data Federation Resource Wiki</a>, and <a class="link" href="https://github.com/CBIIT/ccdi-federation-api" target="_blank" rel="noopener noreferrer">GitHub Repository</a>
+      to support participating node development. You may also get assistance or report an <a class="link" href="https://github.com/CBIIT/ccdi-federation-api-spec/issues/new/choose" target="_blank" rel="noopener noreferrer">issue</a>. Read more about CCDI Federation API in the <a class="link" href="https://cbiit.github.io/ccdi-federation-api/blog/09-25-2024-introducing-the-federation-api.html" target="_blank" rel="noopener noreferrer">blog</a>.</p>
