--- a/mciData.yaml
+++ b/mciData.yaml
@@ -7,6 +7,41 @@ mciContent:
         subtopic: APEC14B1-MCI Enrollment Metrics
         content: >-
           <p>The MCI enrollment metrics are based on counts of patients enrolled with MCI through Project:EveryChild (APEC14B1) and are based on monthly COG reporting.</p>
+        diseaseTable:
+          title: "Enrollments in MCI (APEC14B1-MCI) by Diagnosis Type as of November 12, 2024"
+          header:
+            - ""
+            - "Primary Diagnosis Disease Group"
+            - "Number of Participants"
+          body:
+            - name: "Central Nervous System"
+              value: 3503
+            - name: "Soft Tissue Sarcoma"
+              value: 1061
+            - name: "Rare Tumors"
+              value: 497
+            - name: "Neuroblastoma"
+              value: 265
+            - name: "Ewing Sarcoma"
+              value: 16
+            - name: "Osteosarcoma"
+              value: 10
+            - name: "Germ Cell Tumor"
+              value: 11
+            - name: "Myeloid Leukemia"
+              value: 4
+            - name: "Renal"
+              value: 8
+            - name: "Liver Tumor"
+              value: 4
+            - name: "Non-Hodgkin Lymphoma"
+              value: 3
+            - name: "Lymphoblastic Leukemia"
+              value: 2
+            - name: "Langerhans Cell Histiocytosis"
+              value: 1
+            - name: "Lymphoproliferative Disease"
+              value: 1
         map:
           data:
             - - 110
