Added news items

--- a/newsData.yaml
+++ b/newsData.yaml
@@ -81,3 +81,103 @@ newsList:
       <p>In this release, the CCDI Hub added two key pages of interest: a CCDI data federation resource page and a description of data usage policies and terms. Clarifying text was also added to the “Stats at a Glance” summary, Explore Dashboard, and Molecular Characterization Initiative (MCI) enrollment page. Other improvements include hyperlinked dbGaP accessions and fixed column sorting in the Explore Dashboard grids and improved mobile responsiveness of the MCI resource page.</p>
     type: Site Updates
     img: updateImgDashboard
+
+  - id: hub_06272024
+    title: Latest Hub release includes new studies and enhanced functionality
+    date: June 27, 2024
+    slug:  >-
+      CCDI Hub adds two new studies, updated data sets, and enhanced features in June release
+    highlight: >-
+      <p>The CCDI Hub updated seven data sets and added two new: Pediatric AYA Cancer Touchstone (<a class="link" href="https://www.ncbi.nlm.nih.gov/projects/gap/cgi-bin/study.cgi?study_id=phs002431.v1.p1" target="_blank" rel="noopener noreferrer">phs002431.v1</a>) and Pediatric Tumor Profiling (<a class="link" href="https://www.ncbi.nlm.nih.gov/projects/gap/cgi-bin/study.cgi?study_id=phs002677.v1.p1" target="_blank" rel="noopener noreferrer">phs002677.v1</a>) data sets. These encompass 1,600 participants and 2,700 samples, totaling 20,760 new files. The <a href="/MCI" target="_blank">MCI page</a> now features updated visualizations and a streamlined navigation pane. The Files tab on the <a href="/Explore" target="_blank">Explore Dashboard</a> now includes Library Selection, Source, and Strategy. <a href=${userGuidePDF} target="_blank"}>User Documentation</a> is available, providing instructions for accessing controlled data and navigating the Explore Dashboard.</p>
+    type: Site Updates
+    img: updateImgHub
+
+  - id: ccdc_06122024
+    title: Resource updates featured in this month’s CCDC release
+    date: June 12, 2024
+    slug: >-
+      Six existing resources in the CCDC have been updated
+    highlight: >-
+      <p>The Childhood Cancer Data Catalog (CCDC) now includes 317 data sets from 60 resources. This release adds four new data sets to cBioPortal for Cancer Genomics, Childhood Cancer Data Initiative, and Gene Expression Omnibus. Also, data sets in the CancerModels.org and Patient-Derived Xenograft and Advanced In Vivo Models resources have updated counts, and the Childhood Cancer and Leukemia International Consortium data set is now part of the World Health Organization–International Agency for Research on Cancer resource.</p>
+    type: Application Updates
+    img: updateImgCCDC
+
+  - id: ccdc_05172024
+    title: Two new resources and other updates featured in latest CCDC release
+    date: May 17, 2024
+    slug: >-
+      Childhood Cancer Data Catalog (CCDC) adds two resources and 13 data sets
+    highlight: >-
+      <p>The CCDC now includes the South African National Cancer Registry (NCR) and the World Health Organization-International Agency for Research on Cancer (WHO-IARC) resources. The NCR has played a critical role in cancer prevention and control policy in South Africa and contains demographic, clinical, and reporting source data. The WHO-IARC resource includes epidemiological data. In addition to these resources, 13 new data sets were added, and several other updates were made.</p>
+    type: Application Updates
+    img: updateImgCCDC
+
+  - id: c3dc_05032024
+    title: Significant updates made in latest C3DC release
+    date: May 3, 2024
+    slug: >-
+      The new release represents the harmonization of all clinical data sets in the CCDI Data Ecosystem.
+    highlight: >-
+      <p>Building off its first release, the Childhood Cancer Clinical Data Commons (C3DC) now has nine additional CCDI data sets. These harmonized data sets represent all of the clinical data sets in the CCDI Data Ecosystem, providing a more comprehensive resource for childhood cancer research. The data sets include coverage of study, participant, diagnosis, sample, and survival data. The release also includes updated visuals and enhanced documentation.</p>
+    type: Application Updates
+    img: updateImgC3DC
+
+  - id: ccdc_04102024
+    title: Explore new data sets, a resource, and other CCDC site updates this month
+    date: April 10, 2024
+    slug: >-
+      Sixteen new data sets and a new registry added to the CCDC
+    highlight: >-
+      <p>The Genomics Evidence Neoplasia Information Exchange (GENIE) was added to the Childhood Cancer Data Catalog (CCDC) this month. This publicly accessible cancer registry includes real-world clinico-genomic data from 19 leading international cancer centers. Along with this new resource, the catalog also added 16 new data sets and a new <a href="https://datacatalog.ccdi.cancer.gov/contribute" target="_blank" rel="noopener noreferrer">Contribute to the CCDC</a> page that provides information about submitting data and getting your resource added to the CCDC.</p>
+    type: Application Updates
+    img: updateImgCCDC
+
+  - id: hub2_03272024
+    title: Latest CCDI Hub release includes exciting new technical changes
+    date: March 27, 2024
+    slug: >-
+      An updated data model, new visualizations, and additional updates come to the CCDI Hub
+    highlight: >-
+      <p>The CCDI Hub Explore Dashboard is using an updated model: CCDI Data Model version 1.7.2. This allowed for several updates to the dashboard, including the reconfiguration of diagnoses by classification and status. It also adds two new data visualizations to the Hub’s Molecular Characterization Initiative (MCI) page—a donut chart showing enrollment by diagnosis type, and a bubble chart map of the U.S. depicting the number of MCI participants by state. Also, many other improvements were made to enhance Hub and Explore Dashboard usability.</p>
+    type: Site Updates
+    img: updateImgDashboard
+
+  - id: hub_03272024
+    title: CCDI Hub adds almost 30,000 new files in latest release
+    date: March 27, 2024
+    slug: >-
+      New release includes four new data sets and updates to two existing data sets
+    highlight: >-
+      <p>The CCDI Hub has added four new data sets and updated two existing data sets (the CCDI Molecular Characterization Initiative and Pediatric Brain Tumor Atlas). In adding these, the Hub gains new data from over 1,600 participants and 3,100 samples, along with 30,000 new files.</p>
+    type: Site Updates
+    img: updateImgHub
+
+  - id: ccdc_03132024
+    title: March CCDC release includes updates to five existing resources
+    date: March 13, 2024
+    slug: >-
+      Latest CCDC release also adds 11 new data sets
+    highlight: >-
+      <p>The March Childhood Cancer Data Catalog (CCDC) release includes 11 new data sets in five existing resources, plus other data updates. Two of these additions were to the Childhood Cancer Data Initiative resource—a project data set, Genomic Analysis in Pediatric Malignancies, and an analytic tool set called Center for Computational Genomic Medicine Analytic Tools.</p>
+    type: Application Updates
+    img: updateImgCCDC2
+
+  - id: c3dc_03082024
+    title: CCDI launches new open-access web application
+    date: March 08, 2024
+    slug: >-
+      Access the Childhood Cancer Clinical Data Commons (C3DC) today
+    highlight: >-
+      <p>Find harmonized childhood cancer demographics and phenotypic clinical data in this new CCDI resource. <a href="https://clinicalcommons.ccdi.cancer.gov/" target="_blank" rel="noopener noreferrer">Use the C3DC</a> to search for participant-level data, create synthetic cohorts, and export data from the Molecular Characterization Initiative and TARGET Neuroblastoma. As the C3DC matures, new childhood cancer data and more functionalities will be added.</p>
+    type: Announcements
+    img: updateImgC3DC
+
+  - id: ccdc_02142024
+    title: Childhood Cancer Data Catalog (CCDC) Release Provides More Resources for Users
+    date: February 14, 2024
+    slug: >-
+      Find biospecimens or explore a new cohort study database in this recent CCDC update
+    highlight: >-
+      <p>Search for and request available biospecimens collected from cancer treatment trials in NCI’s National Clinical Trials Network (NCTN) with the NCTN Navigator, one of two resources added to the CCDC. The second, the Cancer Epidemiology Descriptive Cohort Database, is a searchable database with general, biospecimen, and other descriptive cohort study information. Along with these resource additions, nine existing resources were updated, including eight new data sets.</p>
+    type: Application Updates
+    img: updateImgCCDC
