--- a/newsData.yaml
+++ b/newsData.yaml
@@ -201,6 +201,40 @@ newsList:
     type: Application Updates
     img: updateImgCCDC
 
+  - id: ccdc_01172024
+    title: >-
+      Two new resources added to the Childhood Cancer Data Catalog (CCDC)
+    date: January 17, 2024
+    slug: >-
+      This CCDC release includes a tool to explore genomics data and a platform to help accelerate pediatric drug development.
+    highlight: >-
+      <p>Now part of the CCDC: the cBioPortal for Cancer Genomics, a tool for interactive exploration of genomics data sets that aims to lower barriers to accessing complex genomic data. This release also includes the Innovative Therapies for Children with Cancer Paediatric Preclinical Proof-of-Concept Platform (ITCC-P4). The ITCC-P4 platform, developed through an academic-industry partnership, aims to establish new patient-derived preclinical models of high-risk pediatric tumors and help speed up drug development for childhood cancers.</p>
+    type: Application Updates
+    img: updateImgCCDC2
+
+  - id: ehr_01112024
+    title: >-
+      Respond to our latest RFI on automated EHR data entry and extraction capabilities
+    date: January 11, 2024
+    slug: >-
+      Attention research, informatics, health care communities, vendors, and developers! The CCDI wants to hear from you.
+    highlight: >-
+      <p>Do you have capabilities in automated electronic health record (EHR) data entry and extraction? If so, please respond to our latest Request for Information and share your tools, clinical workflows, and approaches for entering and extracting EHR data in a structured format. Your input could help NCI plan a workshop on this topic. 
+      <a class="link" href="https://grants.nih.gov/grants/guide/notice-files/NOT-CA-24-021.html" target="_blank" rel="noopener noreferrer">Submit responses by February 29, 2024. https://grants.nih.gov/grants/guide/notice-files/NOT-CA-24-021.html</a></p>
+    type: Announcements
+    img: updateImgEHR
+
+  - id: hub_12182023
+    title: >-
+      Molecular Characterization Initiative (MCI) Page Added to CCDI Hub
+    date: December 18, 2023
+    slug: >-
+      A new MCI page is among the latest updates to the CCDI Hub website.
+    highlight: >-
+      The CCDI Hub’s new MCI page includes frequently asked questions about MCI, a dataflow diagram of the study, searchable tables, and contact information for results and data. In addition to the MCI page, updates have been made to the “My Files” shopping cart manifest, making it directly importable in the Cancer Genomics Cloud. Other enhancements to the site and Explore Dashboard further improve the user experience.
+    type: Site Updates
+    img: updateImgDashboard
+
   - id: ccdc_12132023
     title: >-
       New to the Childhood Cancer Data Catalog (CCDC): Osteosarcoma Explorer
